<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_apod">

    <fragment
        android:id="@+id/nav_apod"
        android:name="com.agdemidov.nasaclient.ui.apod.ApodsFragment"
        android:label="@string/menu_image_of_the_day"
        tools:layout="@layout/fragment_apod" />

    <fragment
        android:id="@+id/nav_neo"
        android:name="com.agdemidov.nasaclient.ui.neo.NeoFragment"
        android:label="@string/menu_near_earth_objects"
        tools:layout="@layout/fragment_neo" >
        <action
            android:id="@+id/action_nav_neo_to_nav_new_web_page"
            app:destination="@id/nav_new_web_page"
            app:launchSingleTop="false"
            app:popUpTo="@id/nav_new_web_page" />
    </fragment>

    <fragment
        android:id="@+id/nav_new_web_page"
        android:name="com.agdemidov.nasaclient.ui.neo.NeoWebPageFragment"
        android:label="@string/nasa_web_page"
        tools:layout="@layout/fragment_neo_web_page">
        <argument
            android:name="neoPageUrl"
            app:argType="string"
            app:nullable="false" />
    </fragment>

</navigation>