<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/nav_header_padding_4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/nasa_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/nav_header_padding_4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>